# aws-for-jobs

./: .editorconfig  .gitignore  readme.rst
00_-_how_do_i/: find_all_resoruces_created_in_last_thirty_minutes.rst  readme.rst
00_-_memorize-this/: instance-metadata-ip-address.rst  reserved-ip-addresses.rst
00_-_student_on-boarding/: checklist.rst  dl-aws-docs
01_-_it_infrastructure/: assignments.rst  checklist.rst  list-iam-roles.bash  list-iam-roles.cast
02_-_cloud_computing_and_aws/: checklist.rst  questions.rst
03_-_ec2_basics/: awscli-notes.rst  instance-lifecycle.rst  instance.yaml  notes.rst  questions.rst  sg-notes.rst
03_-_ec2_basics/deploy-an-instance/python-boto3/: pyproject.toml
03_-_ec2_basics/deploy-an-instance/python-boto3/src/python_boto3/: __main__.py
04_-_aws_networking/: checklist.rst  notes.rst  questions.rst  vpc_terraform_resources.rst
05_-_storage/: demo_lecture_notes.rst  key-points.rst  notes.rst  objectives.rst  questions.rst  quiz.rst  rhel9docurls.txt  script.js
06_-_security_and_management_services/: demo-create-role.bash  demo-enable-mfa-for-trainer.bash  demos.bash  grant-user-perms-to-pass-a-role.sh  iam_terraform_resources.rst  notes.rst  questions.rst
07_-_aws_monitoring/: create-alarm  lab_1.rst  notes.rst
07_-_monitoring/: notes.rst  tf_resources.rst
08.5_-_project_based_review/: objectives.rst
08_-_scaling_and_elasticity/: main.tf  notes.rst  tf_resources.rst
09_-_database_services/: a_few_more_questions.rst  notes.rst  tf_resources.rst  vocabulary.rst
10_-_systems_manager/: demo_create_a_ssm_role.sh  (+3 more)
(+218 files in other folders)
