[tool.poetry]
name = "python-boto3"
version = "0.1.0"
description = ""
authors = ["Chris King-Parra <chris@kingparra.work>"]
readme = "README.md"
packages = [{include = "python_boto3", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = {extras = ["crt"], version = "^1.28.43"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
